Added Login Page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,42 @@
                     <div class="indicator"></div>
                 </ul>
             </div>
+            <div class="login-area">
+                <div class="login-page" id="login-page">
+                    <div class="form-container sign-up" >
+                        <form >
+                            <h2>Create Account</h2>
+                            <input type="text" placeholder="Enter your Name">
+                            <input type="text" placeholder="Enter your email">
+                            <input type="text" placeholder="password">
+                            <button>Sign Up</button>
+                        </form>
+                    </div>
+                    <div class="form-container sign-in" >
+                        <form >
+                            <h2>Login</h2>
+                            <input type="text" placeholder="Enter your email">
+                            <input type="text" placeholder="password">
+                            <button>Sign In</button>
+                        </form>
+                    </div>
+                    <div class="toggle-container">
+                        <div class="toggle">
+                            <div class="toggle-panel toggle-left">
+                                <h2>Manage your Tasks </h2>
+                                <p>Managing Your Tasks helps you Meets Deadline constitently and boost perfomance at large</p>
+                                <p>Enter your details to use all our of site features</p>
+                                <button class="hidden" id="login">Sign In</button>
+                            </div>
+                            <div class="toggle-panel toggle-right">
+                                <h2> Hi Friend! Manage your Tasks </h2>
+                                <p>Register with your personal details to use all of site features</p>
+                                <button class="hidden" id="register">Sign Up</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class = "finishedTasks">
             <h1>Finished Tasks Page</h1>
