--- a/index.html
+++ b/index.html
@@ -9,29 +9,31 @@
 <body>
     <div class="container">
         <section class = "home">
-            <div class="navigation">
-                <ul>
-                    <li class="list active">
-                        <a href="#">
-                            <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                            <span class="text">Home</span>
-                        </a>
-                    </li>
-                    <li class="list">
-                        <a href="#">
-                            <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                            <span class="text">All Tasks</span>
-                        </a>
-                    </li>
-                    <li class="list">
-                        <a href="#">
-                            <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
-                            <span class="text">Messages</span>
-                        </a>
-                    </li>
-                    <div class="indicator"></div>
-                </ul>
-            </div>
+            <header>
+                <div class="navigation">
+                    <ul>
+                        <li class="list active">
+                            <a href="#">
+                                <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                                <span class="text">Home</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#">
+                                <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                                <span class="text">All Tasks</span>
+                            </a>
+                        </li>
+                        <li class="list">
+                            <a href="#">
+                                <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
+                                <span class="text">Messages</span>
+                            </a>
+                        </li>
+                        <div class="indicator"></div>
+                    </ul>
+                </div>
+            </header>
             <div class="login-area">
                 <div class="login-page" id="login-page">
                     <div class="form-container sign-up" >
