Added Animated Circular Diagram on home page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,63 @@
                         </div>
                     </div>
                 </div>
+                <div class="container-ring">
+                    <div class="ring r01"></div>
+                    <div class="ring r02"></div>
+                    <div class="ring r03"></div>
+                    <div class="ring r04"></div>
+                    <div class="ring r051"></div>
+                    <div class="ring r052"></div>
+                    <div class="ring r06"></div>
+                    <div class="ring r07"></div>
+                    <div class="ring r08"></div>
+                    <div class="ring r09"></div>
+                </div>
+                <div class="container-ring2">
+                    <div class="ring r01"></div>
+                    <div class="ring r02"></div>
+                    <div class="ring r03"></div>
+                    <div class="ring r04"></div>
+                    <div class="ring r051"></div>
+                    <div class="ring r052"></div>
+                    <div class="ring r06"></div>
+                    <div class="ring r07"></div>
+                    <div class="ring r08"></div>
+                    <div class="ring r09"></div>
+                </div>
+                <div class="container-cup">
+                    <div class="plate"></div>
+                    <div class="cup">
+                        <div class="top-part">
+                            <div class="vapour">
+                                <span style="--i:1;"></span>
+                                <span style="--i:3;"></span>
+                                <span style="--i:16;"></span>
+                                <span style="--i:5;"></span>
+                                <span style="--i:13;"></span>
+                                <span style="--i:20;"></span>
+                                <span style="--i:6;"></span>
+                                <span style="--i:7;"></span>
+                                <span style="--i:10;"></span>
+                                <span style="--i:8;"></span>
+                                <span style="--i:17;"></span>
+                                <span style="--i:11;"></span>
+                                <span style="--i:12;"></span>
+                                <span style="--i:14;"></span>
+                                <span style="--i:2;"></span>
+                                <span style="--i:9;"></span>
+                                <span style="--i:18;"></span>
+                                <span style="--i:4;"></span>
+                                <span style="--i:15;"></span>
+                                <span style="--i:19;"></span> 
+                            </div>
+                            <div class="circle">
+                                <div class="tea"></div>
+                            </div>
+                        </div>
+                        <div class="handle"></div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class = "finishedTasks">
