--- a/index.html
+++ b/index.html
@@ -129,7 +129,17 @@
             </div>
         </section>
         <section class = "finishedTasks">
-            <h1>Finished Tasks Page</h1>
+            <div class="task-pane">
+                <div class="top-widget">
+                    <h2>Header</h2>
+                </div>
+                <div class="main-widget">
+                    <h2>Main Content</h2>
+                </div>
+                <div class="aside-widget">
+                    <h2>aside</h2>
+                </div>
+            </div>
         </section>
         <section class = "footer">
             <h1>Footer Page</h1>
