Added Login feature Using Email and Password

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                         </form>
                     </div>
                     <div class="form-container sign-in" >
-                        <form >
+                        <form id = "loginForm">
                             <h2>Login</h2>
-                            <input type="text" placeholder="Enter your email">
-                            <input type="text" placeholder="password">
+                            <input type="text" placeholder="Enter your email" id = "login_email">
+                            <input type="text" placeholder="password" id = "login_password">
                             <button>Sign In</button>
                         </form>
                     </div>
