--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <form id = "loginForm">
                             <h2>Login</h2>
                             <input type="text" placeholder="Enter your email" id = "login_email">
-                            <input type="text" placeholder="password" id = "login_password">
+                            <input type="password" placeholder="password" id = "login_password">
                             <button>Sign In</button>
                         </form>
                     </div>
