Linked Navlinks with Pages

--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
     <div class="container">
-        <section class = "home">
+        <section id= "login" class = "home">
             <header>
                 <div class="navigation">
                     <ul>
                         <li class="list active">
-                            <a href="#">
+                            <a href="#login">
                                 <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                                 <span class="text">Home</span>
                             </a>
                         </li>
                         <li class="list">
-                            <a href="#">
+                            <a href="#home">
                                 <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                                 <span class="text">All Tasks</span>
                             </a>
                         </li>
                         <li class="list">
-                            <a href="#">
+                            <a href="#footer">
                                 <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
                                 <span class="text">Messages</span>
                             </a>
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </section>
-        <section class = "finishedTasks">
+        <section id = "home" class = "finishedTasks">
             <div class="task-pane">
                 <div class="top-widget">
                     <div class="greetings">
@@ -179,7 +179,7 @@
                 </div>
             </div>
         </section>
-        <section class = "footer">
+        <section id="footer" class = "footer">
             <h1>Footer Page</h1>
         </section>
     </div>
