Added First and Last Name inputs is signup area

--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
                     </ul>
                 </div>
             </header>
-            
-                <div class="container-ring">
-                    <div class="ring r01"></div>
-                    <div class="ring r02"></div>
-                    <div class="ring r03"></div>
-                    <div class="ring r04"></div>
-                    <div class="ring r051"></div>
-                    <div class="ring r052"></div>
+            <!-- <div class="container-ring">
+                <div class="ring r01"></div>
+                <div class="ring r02"></div>
+                <div class="ring r03"></div>
+                <div class="ring r04"></div>
+                <div class="ring r051"></div>
+                <div class="ring r052"></div>
                     <div class="ring r06"></div>
                     <div class="ring r07"></div>
                     <div class="ring r08"></div>
@@ -92,7 +91,7 @@
                         <div class="handle"></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <section id = "home" class = "finishedTasks">
             <div class="task-pane">
