--- a/login.html
+++ b/login.html
@@ -11,7 +11,8 @@
         <div class="form-container sign-up" >
             <form id="signup-form">
                 <h2>Create Account</h2>
-                <input id="name" type="text" placeholder="Enter your Name" required>
+                <input id="firstname" type="text" placeholder="Enter your First Name" required>
+                <input id="lastname" type="text" placeholder="Enter your Last Name" required>
                 <input id="email" type="text" placeholder="Enter your email" required>
                 <input id="password" type="password" placeholder="password" required>
                 <button>Sign Up</button>
