Updated file structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager || Manage your Tasks</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/2.0.0/js/dataTables.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.0/css/dataTables.dataTables.css" />
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
+
   
     <!-- Swiper css -->
-    <link rel="stylesheet" href="swiper-bundle.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -49,19 +48,19 @@
                         <div class="statusList">
                             <div class=" tasks total-tasks">
                                 <h4>Total Tasks</h4>
-                                <div class="task-icon"><img src="task.png" alt="" srcset=""><span>23</span></div>
+                                <div class="task-icon"><img src="/static/images/task.png" alt="" srcset=""><span>23</span></div>
                             </div>
                             <div class=" tasks pending-tasks">
                                 <h4>Ongoing</h4>
-                                <div class="task-icon"><img src="automation.png" alt="" srcset=""><span>8</span></div>
+                                <div class="task-icon"><img src="/static/images/automation.png" alt="" srcset=""><span>8</span></div>
                             </div>
                             <div class=" tasks pending-tasks">
                                 <h4>Pending </h4>
-                                <div class="task-icon"><img src="pending-tasks.png" alt="" srcset=""><span>11</span></div>
+                                <div class="task-icon"><img src="/static/images/pending-tasks.png" alt="" srcset=""><span>11</span></div>
                             </div>
                             <div class=" tasks completed-tasks">
                                 <h4>Completed</h4>
-                                <div class="task-icon"><img src="completed-task.png" alt="" srcset=""><span>4</span></div>
+                                <div class="task-icon"><img src="/static/images/completed-task.png" alt="" srcset=""><span>4</span></div>
                             </div>
                         </div>
                     </div>
@@ -300,9 +299,9 @@
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="auth.js" type="module"></script>
-    <script src="script.js"></script>
+    <script src="/static/js/auth.js" type="module"></script>
+    <script src="/static/js/script.js"></script>
 </body>
 <!-- Swiper js -->
-    <script src="swiper-bundle.min.js"></script>
+    <script src="/static/js/swiper-bundle.min.js"></script>
 </html>
