--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                         </li>
                         <li class="list">
                             <a href="#home">
-                                <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                                <span class="icon"><ion-icon name="newspaper-outline"></ion-icon></span>
                                 <span class="text">All Tasks</span>
                             </a>
                         </li>
                         <li class="list">
                             <a href="#footer">
-                                <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
+                                <span class="icon"><ion-icon name="mail-unread-outline"></ion-icon></span>
                                 <span class="text">Messages</span>
                             </a>
                         </li>
@@ -80,25 +80,25 @@
                                     </div> -->
                                     <div class="deadline-count-down">
                                         <div id="time">
-                                            <div class="circle" style="--clr: #1eb9ff;">
+                                            <div class="circle" style="--clr: #9741cc;">
                                                 <svg>
                                                     <circle cx = "45" cy = "45" r = "45" id = "dd"></circle>
                                                 </svg>
                                                 <div id="days">00 <br> <span>Days</span></div>
                                             </div>
-                                            <div class="circle" style="--clr: #ff2972;">
+                                            <div class="circle" style="--clr: #2992e7;">
                                                 <svg>
                                                     <circle  cx = "45" cy = "45" r = "45" id = "hh"></circle>
                                                 </svg>
                                                 <div id="hours">00 <br> <span>Hours</span></div>
                                             </div>
-                                            <div class="circle" style="--clr: #fee800;">
+                                            <div class="circle" style="--clr: #0ef;">
                                                 <svg>
                                                     <circle  cx = "45" cy = "45" r = "45" id = "mm"></circle>
                                                 </svg>
                                                 <div id="minutes">00 <br> <span>Minutes</span></div>
                                             </div>
-                                            <div class="circle" style="--clr: #04fc43;">
+                                            <div class="circle" style="--clr: #2987a3;">
                                                 <svg>
                                                     <circle  cx = "45" cy = "45" r = "45" id = "ss"></circle>
                                                 </svg>
