--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="top-widget">
                     <div class="tasks-status-container">
                         <div class="salutation">
-                            <h4>Hello, <span>Fixtone</span></h4>
+                            <h4>Hello, <span> Fixtone</span></h4>
                         </div>
                         <div class="statusList">
                             <div class=" tasks total-tasks">
@@ -80,13 +80,13 @@
                                     </div> -->
                                     <div class="deadline-count-down">
                                         <div id="time">
-                                            <div class="circle" style="--clr: #9741cc;">
+                                            <div class="circle" style="--clr: #7f11c4;">
                                                 <svg>
                                                     <circle cx = "45" cy = "45" r = "45" id = "dd"></circle>
                                                 </svg>
                                                 <div id="days">00 <br> <span>Days</span></div>
                                             </div>
-                                            <div class="circle" style="--clr: #2992e7;">
+                                            <div class="circle" style="--clr: #61d81c;">
                                                 <svg>
                                                     <circle  cx = "45" cy = "45" r = "45" id = "hh"></circle>
                                                 </svg>
@@ -173,50 +173,147 @@
         </section>
         <section id = "home" class = "finishedTasks">
             <div class="task-pane">
-                <div class="top-widget">    
+                <div class="top-nav">  
+                    <div class="new-task">
+                        <button type="button" id="new-task-form-btn"><ion-icon name="add-outline"></ion-icon></button>
+                    </div>
                 </div>
-                <div class="main-widget">
-                    <table id="task-table" class="display">
-                        <thead>
-                            <tr>
-                                <th>Date</th>
-                                <th>Time Created</th>
-                                <th>ID</th>
-                                <th>Task Name</th>
-                                <th>Description</th>
-                                <th>Start Date</th>
-                                <th>Due Date</th>
-                                <th>Action</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>22/2/2024</td>
-                                <td>04:20PM</td>
-                                <td>1E33t34ffgD</td>
-                                <td>Design Wireframes </td>
-                                <td>all Frames deigned nad connected</td>
-                                <td>11:00am</td>
-                                <td>14:24pm</td>
-                                <td>pending</td>
-                                <td><span>delete</span> <span>edit</span></td>
-                            </tr>
-                            <tr>
-                                <td>22/2/2024</td>
-                                <td>04:20PM</td>
-                                <td>1E33t34ffgD</td>
-                                <td>Design Wireframes </td>
-                                <td>all Frames deigned nad connected</td>
-                                <td>11:00am</td>
-                                <td>14:24pm</td>
-                                <td>pending</td>
-                                <td><span>delete</span> <span>edit</span></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="main-widget-list">
+                    <div class="table-header">
+                        <table cellpadding = "0" cellspacing ="0" border="0">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Time Created</th>
+                                    <th>Task Id</th>
+                                    <th>Task Name</th>
+                                    <th>Description</th>
+                                    <th>Start Date</th>
+                                    <th>Due Date</th>
+                                    <th>Action</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                        </table>
+                    </div>
+                    <div class="display">
+                        <table cellpadding = "0" cellspacing ="0" border="0" id="task-table" >
+                            <tbody>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                                <tr>
+                                    <td>22/2/2024</td>
+                                    <td>04:20PM</td>
+                                    <td>1E33t34ffgD</td>
+                                    <td>Design Wireframes </td>
+                                    <td>all Frames deigned nad connected</td>
+                                    <td>11:00am</td>
+                                    <td>14:24pm</td>
+                                    <td>pending</td>
+                                    <td><span>delete</span> <span>edit</span></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <div class="aside-widget">
+                <div class="bottom-widget">
                     <h2>aside</h2>
                 </div>
             </div>
