--- a/login.html
+++ b/login.html
@@ -3,11 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
-    <title>login</title>
+    <link rel="stylesheet" href="/static/css/login.css">
+    <title>My site || 94tec Modern Login Page</title>
 </head>
 <body>
-    <div class="container" id="container">
+    <header>
+        <div class="navigation">
+            <ul>
+                <li class="list active">
+                    <a href="#">
+                        <span class="icon"><ion-icon name="chatbox-outline"></ion-icon></span>
+                        <span class="text">Contact us</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="#">
+                        <span class="icon"><ion-icon name="telescope-outline"></ion-icon></span>
+                        <span class="text">About</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="#">
+                        <span class="icon"><ion-icon name="cube-outline"></ion-icon></span>
+                        <span class="text">Demo</span>
+                    </a>
+                </li>
+                <div class="indicator"></div>
+            </ul>
+        </div>
+        <button type="button" id="loginBtn">Login</button>
+    </header>
+    <div class="page-description">
+        <img src="/static/images/task6.jpeg" alt="" srcset="">
+        <h4> Organise your tasks</h4>
+        <p>
+            If you need a platform to scale task management and project management <br> 
+            94_Tasks delivers what you need within reach to manage personal to-do lists.
+        </p>
+        <button type="button" id="get_started_btn">Get Started</button>
+    </div>
+    <div class="container" id="login_container">
+        <div class="hide-btn"><ion-icon name="close-outline"></ion-icon></div>
         <div class="form-container sign-up" >
             <form id="signup-form">
                 <h2>Create Account</h2>
@@ -20,7 +56,7 @@
         </div>
         <div class="form-container sign-in" >
             <form id = "loginForm">
-                <h2>Login</h2>
+                <h2>Login || Enter your Credentials</h2>
                 <input id = "login_email" type="text" placeholder="Enter your email">
                 <input id = "login_password" type="password" placeholder="password">
                 <button>Sign In</button>
@@ -36,12 +72,15 @@
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h2> Hi Friend! Manage your Tasks </h2>
-                    <p>Register with your personal details to uuse all of site features</p>
+                    <p>Register with your personal details to use all of site features</p>
                     <button class="hidden" id="register">Sign Up</button>
                 </div>
             </div>
         </div>
     </div>
-    <script type="module" src="login.js"></script>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="/static/js/login.js" type = "module"></script>
 </body>
 </html>
