--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="top-widget">
                     <div class="tasks-status-container">
                         <div class="salutation">
-                            <h4>Hello, <span> Fixtone</span></h4>
+                            <h4>Hello, <span id = "user"></span></h4>
                         </div>
                         <div class="statusList">
                             <div class=" tasks total-tasks">
