--- a/index.html
+++ b/index.html
@@ -38,6 +38,32 @@
                         <div class="indicator"></div>
                     </ul>
                 </div>
+                <div class = "profile">
+                    <div class = "profile-button" id="profile-button">
+                        <label id="selected-link-active">My account</label>
+                        <ion-icon name="chevron-down-outline"></ion-icon>
+                    </div>
+                    <ul class="dropdown-content">
+                        <li class="option" id="statusOption" style="--i:1">
+                            <a href="#">
+                                <ion-icon name="trending-up-outline" class="icon"></ion-icon>
+                                <span class="selected-link">Edit Profile</span>
+                            </a> 
+                        </li>
+                        <li class="option" id="statusOption" style="--i:3">
+                            <a href="#">
+                                <ion-icon name="barbell-outline" class="icon"></ion-icon>
+                                <span class="selected-link">Settings</span>
+                            </a> 
+                        </li>
+                        <li class="option" id="statusOption" style="--i:3">
+                            <a href="#">
+                                <ion-icon name="barbell-outline" class="icon"></ion-icon>
+                                <span class="selected-link">Logout</span>
+                            </a> 
+                        </li>
+                </ul>
+                </div>  
             </header>
             <div class="dashboard">
                 <div class="top-widget">
