--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                         <ion-icon name="chevron-down-outline"></ion-icon>
                     </div>
                     <ul class="dropdown-content">
-                        <li class="option" id="statusOption" style="--i:1">
+                        <li class="selection" id="selection" style="--i:1">
                             <a href="#">
                                 <ion-icon name="trending-up-outline" class="icon"></ion-icon>
                                 <span class="selected-link">Edit Profile</span>
                             </a> 
                         </li>
-                        <li class="option" id="statusOption" style="--i:3">
+                        <li class="selection" id="selection" style="--i:3">
                             <a href="#">
                                 <ion-icon name="barbell-outline" class="icon"></ion-icon>
                                 <span class="selected-link">Settings</span>
                             </a> 
                         </li>
-                        <li class="option" id="statusOption" style="--i:3">
+                        <li class="selection" id="selection" style="--i:3">
                             <a href="#">
                                 <ion-icon name="barbell-outline" class="icon"></ion-icon>
                                 <span class="selected-link">Logout</span>
