--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
                         </span>
                     </div>
                 </div>
+                <div id="toast" class="toast">
+                    <div class="toast-content">
+                        <span id="toast-message" class="message">This is a toast notification</span>
+                        <div class="progress-bar"></div>
+                    </div>
+                </div>
             </div>
         </section>
         <section id = "home" class = "finishedTasks">
@@ -225,128 +231,7 @@
                     </div>
                     <div class="display">
                         <table cellpadding = "0" cellspacing ="0" border="0" id="task-table" >
-                            <tbody>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                                <tr>
-                                    <td>22/2/2024</td>
-                                    <td>04:20PM</td>
-                                    <td>1E33t34ffgD</td>
-                                    <td>Design Wireframes </td>
-                                    <td>all Frames deigned nad connected</td>
-                                    <td>Low</td>
-                                    <td>11:00am</td>
-                                    <td>14:24pm</td>
-                                    <td>pending</td>
-                                    <td><span>delete</span> <span>edit</span></td>
-                                </tr>
-                            </tbody>
+                            <tbody id="tasks-table-body"></tbody>
                         </table>
                     </div>
                 </div>
@@ -428,40 +313,7 @@
         </section>
         <section id="footer" class = "footer">
             <div class="footer-pane">
-                <div class="container" id="container">
-                    <div class="form-container sign-up" >
-                        <form >
-                            <h2>Create Account</h2>
-                            <input type="text" placeholder="Enter your Name">
-                            <input type="text" placeholder="Enter your email">
-                            <input type="text" placeholder="password">
-                            <button>Sign Up</button>
-                        </form>
-                    </div>
-                    <div class="form-container sign-in" >
-                        <form >
-                            <h2>Login</h2>
-                            <input type="text" placeholder="Enter your email">
-                            <input type="text" placeholder="password">
-                            <button>Sign In</button>
-                        </form>
-                    </div>
-                    <div class="toggle-container">
-                        <div class="toggle">
-                            <div class="toggle-panel toggle-left">
-                                <h2>Manage your Tasks </h2>
-                                <p>Managing Your Tasks helps you Meets Deadline constitently and boost perfomance at large</p>
-                                <p>Enter your details to use all our of site features</p>
-                                <button class="hidden" id="login">Sign In</button>
-                            </div>
-                            <div class="toggle-panel toggle-right">
-                                <h2> Hi Friend! Manage your Tasks </h2>
-                                <p>Register with your personal details to uuse all of site features</p>
-                                <button class="hidden" id="register">Sign Up</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </section>
     </div>
