--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
                         <table cellpadding = "0" cellspacing ="0" border="0">
                             <thead>
                                 <tr>
-                                    <th>Date</th>
+                                    <!-- <th>Date</th>
                                     <th>Time Created</th>
-                                    <th>Task Id</th>
+                                    <th>Task Id</th> -->
                                     <th>Task Name</th>
                                     <th>Description</th>
                                     <th>Priority</th>
@@ -313,7 +313,21 @@
         </section>
         <section id="footer" class = "footer">
             <div class="footer-pane">
-                
+                <table cellpadding = "0" cellspacing ="0" border="0" id = "myTable">
+                    <thead>
+                        <tr>
+                            <th>sNo</th>
+                            <th>Task Name</th>
+                            <th>Description</th>
+                            <th>Priority</th>
+                            <th>Start Date</th>
+                            <th>Due Date</th>
+                            <th>Status</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody id = "table-data"></tbody>
+                </table>
             </div>
         </section>
     </div>
