--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         </table>
                     </div>
                     <div class="display">
-                        <table cellpadding = "0" cellspacing ="0" border="0" id="task-table" >
+                        <table cellpadding = "0" cellspacing ="0" border="0" id="task-able" >
                             <tbody id="tasks-table-body"></tbody>
                         </table>
                     </div>
@@ -316,12 +316,11 @@
                 <table cellpadding = "0" cellspacing ="0" border="0" id = "myTable">
                     <thead>
                         <tr>
-                            <th>sNo</th>
                             <th>Task Name</th>
                             <th>Description</th>
-                            <th>Priority</th>
                             <th>Start Date</th>
                             <th>Due Date</th>
+                            <th>Priority</th>
                             <th>Status</th>
                             <th>Action</th>
                         </tr>
